CombinerSecurityManager - Replace ExecutorService using platform threads with virtual threads. #48